--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -87,3 +87,98 @@
 </div>
 
 
+
+<div class="records-banner" data-aos-duration="800">
+  <div class="trust-info">
+    <h1 style="color: grey;">Statics  <br>
+      dans cette plateforme</h1>
+
+    <ul>
+
+        <li style="color: rgb(0, 0, 0);">&#10004;  Les enregistrements ne sont accessibles que par vous</li>
+        <li style="color: rgb(0, 0, 0);">&#10004; Accédez à vos dossiers dans plus de 400 centres</li>
+    </ul>
+  </div>
+  <div class="trust-img" style="margin-right: 10%;margin-top: 5%; margin-bottom: 5px;">
+    <div class="main-container">
+      <div class="year-stats">
+        <div class="month-group">
+          <div class="bar h-100"></div>
+          <p class="month">Jan</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-50"></div>
+          <p class="month">Feb</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-75"></div>
+          <p class="month">Mar</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-25"></div>
+          <p class="month">Apr</p>
+        </div>
+        <div class="month-group selected">
+          <div class="bar h-100"></div>
+          <p class="month">May</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-50"></div>
+          <p class="month">Jun</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-75"></div>
+          <p class="month">Jul</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-25"></div>
+          <p class="month">Aug</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-50"></div>
+          <p class="month">Sep</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-75"></div>
+          <p class="month">Oct</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-25"></div>
+          <p class="month">Nov</p>
+        </div>
+        <div class="month-group">
+          <div class="bar h-100"></div>
+          <p class="month">Dez</p>
+        </div>
+      </div>
+
+      <div class="stats-info">
+        <div class="graph-container">
+          <div class="percent">
+            <svg viewBox="0 0 36 36" class="circular-chart">
+              <path class="circle" stroke-dasharray="100, 100" d="M18 2.0845
+        a 15.9155 15.9155 0 0 1 0 31.831
+        a 15.9155 15.9155 0 0 1 0 -31.831" />
+              <path class="circle" stroke-dasharray="85, 100" d="M18 2.0845
+        a 15.9155 15.9155 0 0 1 0 31.831
+        a 15.9155 15.9155 0 0 1 0 -31.831" />
+              <path class="circle" stroke-dasharray="60, 100" d="M18 2.0845
+        a 15.9155 15.9155 0 0 1 0 31.831
+        a 15.9155 15.9155 0 0 1 0 -31.831" />
+              <path class="circle" stroke-dasharray="30, 100" d="M18 2.0845
+        a 15.9155 15.9155 0 0 1 0 31.831
+        a 15.9155 15.9155 0 0 1 0 -31.831" />
+            </svg>
+          </div>
+          <p>Total de patients : 5698 </p>
+        </div>
+
+        <div class="info">
+          <p>Most expensive category <br /><span>Restaurants & Dining</span></p>
+          <p>Updated categories <span>2</span></p>
+          <p>Bonus payments <span>$92</span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
