--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -43,7 +43,7 @@
               <div class="footer-widget-heading">
                 <h3>Pour les patients</h3>
               </div>
-              <p>Un doute, une inquiétude, besoin d’un conseil santé ? Rendez-vouya.tn c’est la solution
+              <p>Un doute, une inquiétude, besoin d’un conseil santé ? <br> Notre plateforme  est la solution
 
                 Rendez-vouya est une plateforme innovante qui vous permet de trouver rapidement un médecin le plus
                 proche de chez vous et de prendre rendez-vous en ligne gratuitement.</p>
