--- a/src/app/quisomme/quisomme.component.html
+++ b/src/app/quisomme/quisomme.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <img src="../assets/img/New Product Mockup Now Available Marketing Promotion Instagram Post (3).png" class="rounded mx-auto d-block" style="width: 600px;" alt="responsive">
+    <img src="../assets/img/New Product Mockup Now Available Marketing Promotion Instagram Post (4).png" class="rounded mx-auto d-block" style="width: 600px;margin-top: 20px;" alt="responsive">
 
     <div class="col-12">
     <h1>Qui sommes nous ?</h1>
@@ -17,6 +17,10 @@
 
             Rendez-vouya est une plateforme innovante qui vous permet de trouver rapidement un médecin le plus
             proche de chez vous et de prendre rendez-vous en ligne gratuitement.</p>
+
+            <div class="">
+              <button class="custom-btn btn-5" [routerLink]="['/createcompte']"><span>Inscrire</span></button>
+            </div>
           </div>
         </div>
       </div>
