--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -7,26 +7,68 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <section class="section section-small">
               <div class="row">
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"  style="margin-top: 12px;">
                       <div class="form-group">
                           <input type="text" class="form-control datetimepicker" [(ngModel)]="nomMedecin" placeholder="Nom du professionnel de la santé">
                       </div>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="margin-top: 12px;">
                     <div class="form-group">
-                      <input type="text" class="form-control datetimepicker" [(ngModel)]="telMedecin" placeholder="numero de cabine ">
-
+                      <select name="specialite" tabindex="6"  [(ngModel)]="specialite"class="form-select" >
+                        <option selected>Choisissez une spécialité</option>
+                        <option value="Allergologie" >Allergologie</option>
+                        <option value="Anesthésiologie">Anesthésiologie</option>
+                        <option value="Angiologie">Angiologie</option>
+                        <option value="Cancérologie">Cancérologie</option>
+                        <option value="Cardiologie">Cardiologie</option>
+                        <option value="Chirurgie cardiaque">Chirurgie cardiaque</option>
+                        <option value="Chirurgie générale">Chirurgie générale</option>
+                        <option value="Chirurgie maxillo-faciale">Chirurgie maxillo-faciale</option>
+                        <option value="Chirurgie orthopédique">Chirurgie orthopédique</option>
+                        <option value="Chirurgie plastique et reconstructive">Chirurgie plastique et reconstructive</option>
+                        <option value="Chirurgie thoracique">Chirurgie thoracique</option>
+                        <option value="Chirurgie vasculaire">Chirurgie vasculaire</option>
+                        <option value="Dermatologie">Dermatologie</option>
+                        <option value="Endocrinologie">Endocrinologie</option>
+                        <option value="Gastro-entérologie">Gastro-entérologie</option>
+                        <option value="Gériatrie">Gériatrie</option>
+                        <option value="Gynécologie">Gynécologie</option>
+                        <option value="Hématologie">Hématologie</option>
+                        <option value="Immunologie">Immunologie</option>
+                        <option value="Infectiologie">Infectiologie</option>
+                        <option value="Médecine interne">Médecine interne</option>
+                        <option value="Médecine nucléaire">Médecine nucléaire</option>
+                        <option value="Néonatologie">Néonatologie</option>
+                        <option value="Néphrologie">Néphrologie</option>
+                        <option value="Neurochirurgie">Neurochirurgie</option>
+                        <option value="Neurologie">Neurologie</option>
+                        <option value="Obstétrique">Obstétrique</option>
+                        <option value="Odontologie">Odontologie</option>
+                        <option value="Oncologie médicale">Oncologie médicale</option>
+                        <option value="Ophtalmologie">Ophtalmologie</option>
+                        <option value="Orthodontie">Orthodontie</option>
+                        <option value="Orthopédie">Orthopédie</option>
+                        <option value="Oto-rhino-laryngologie (ORL)">Oto-rhino-laryngologie (ORL)</option>
+                        <option value="Pédiatrie">Pédiatrie</option>
+                        <option value="Pneumologie">Pneumologie</option>
+                        <option value="Podologie">Podologie</option>
+                        <option value="Psychiatrie">Psychiatrie</option>
+                        <option value="Radiologie">Radiologie</option>
+                        <option value="Rhumatologie">Rhumatologie</option>
+                        <option value="Stomatologie">Stomatologie</option>
+                        <option value="Toxicologie">Toxicologie</option>
+                        <option value="Urologie">Urologie</option>
+                        <option value="Vénérologie">Vénérologie</option>
+                      </select>
                   </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="form-group">
-                      <input type="text" class="form-control datetimepicker" [(ngModel)]="emailMedecin" placeholder="email du professionnel de la santé">
-                  </div>
+                    <button class="btn btn-lg btn-kootour-bold btn-search" (click)="searchMedecin()">
+                      Rechercher </button>
                   </div>
                   <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                      <button class="btn btn-lg btn-kootour-bold btn-search" (click)="searchMedecin()">
-                        Rechercher </button>
+
                     </div>
                 </div>
               </div>
@@ -49,6 +91,9 @@
               <p class="card-text">Email: {{ medecin?.email }}</p>
               <p class="card-text mb-0">Numero du téléphone: {{ medecin?.num_telephone }}</p>
               <p class="card-text">Numero du fixe: {{ medecin?.num_fixe_cabinet }}</p>
+
+              <button class="custom-btn btn-13" [routerLink]="['/prendre-rendezvous']" (click)="prendreRendezVous(medecin?.id)">Prendre un rendez-vous</button>
+      
  </div>
           </div>
         </div>
