--- a/src/app/demande/demande.component.html
+++ b/src/app/demande/demande.component.html
@@ -6,15 +6,12 @@
 
     <div class="profile-card__cnt js-profile-cnt">
       <div class="profile-card__name">Rendez-vouya</div>
-      <div class="profile-card__txt">Societe XXX  <strong>Rue YYY</strong></div>
+
       <div class="profile-card-loc">
         <span class="profile-card-loc__icon">
           <svg class="icon"><use xlink:href="#icon-location"></use></svg>
         </span>
 
-        <span class="profile-card-loc__txt">
-          Tozeur, Tunis
-        </span>
       </div>
 
       <div class="profile-card-loc">
@@ -91,7 +88,7 @@
             </fieldset>
 
             <fieldset>
-              <button name="submit" type="submit" id="contact-submit" [disabled]="!contactForm.valid">Submit</button>
+              <button name="submit" type="submit" id="contact-submit" [disabled]="!contactForm.valid" style="background-color:  #6944ff;">Envoyer la demande</button>
             </fieldset>
           </form>
         </div>
