--- a/src/app/demaqndemedecin/demaqndemedecin.component.html
+++ b/src/app/demaqndemedecin/demaqndemedecin.component.html
@@ -6,7 +6,7 @@
 
     <div class="profile-card__cnt js-profile-cnt">
       <div class="profile-card__name">Rendez-vouya</div>
-      <div class="profile-card__txt">Societe XXX  <strong>Rue YYY</strong></div>
+
       <div class="profile-card-loc">
         <span class="profile-card-loc__icon">
           <svg class="icon"><use xlink:href="#icon-location"></use></svg>
@@ -29,15 +29,11 @@
         </div>
 
         <div class="profile-card-inf__item">
-          <div class="profile-card-inf__title">123</div>
+          <div class="profile-card-inf__title">200</div>
           <div class="profile-card-inf__txt">Spécialiste</div>
         </div>
 
-        <div class="profile-card-inf__item">
-          <div class="profile-card-inf__title">8500</div>
-          <div class="profile-card-inf__txt">Dossier medicals</div>
-        </div>
-      </div>
+
 
       <div class="profile-card__txt" style="margin-top: 20px;">Pour vous inscrire sur cette plateforme, vous devez soumettre la candidature et les documents nécessaires et obtenir la confirmation du droit de publier des informations médicales afin de garder vos informations accessibles.</div>
 
@@ -46,30 +42,29 @@
         <div class="profile-card-loc">
 
 
-          <span class="profile-card-loc__txt" style="margin-top: 20px;">
+          <span class="profile-card-loc__txt" >
             Comment ca se passe ?
           </span>
 
         </div>
-        <div class="profile-card__txt" > Votre inscription en 3 étapes</div>
+        <div class="profile-card__txt" >&nbsp; Votre inscription en 3 étapes :  </div>
         <div class="profile-card-inf" style="margin-top: 20px;">
           <div class="profile-card-inf__item">
             <div class="profile-card-inf__title">1</div>
-            <div class="profile-card-inf__txt">Vérification systématique <br>
-              de l’identité du médecin</div>
+            <div class="profile-card-inf__txt">Recevoir une demande  <br> d'inscription du médecin</div>
           </div>
 
           <div class="profile-card-inf__item">
             <div class="profile-card-inf__title">2</div>
-            <div class="profile-card-inf__txt">Création de votre fiche,<br> incluant : Adresse, numéro de téléphone,<br>
-              géolocalisation, spécialité</div>
+            <div class="profile-card-inf__txt">Vérification systématique de <br>
+              l’identité du médecin</div>
           </div>
 
           <div class="profile-card-inf__item">
             <div class="profile-card-inf__title">3</div>
-            <div class="profile-card-inf__txt">Listing aléatoire de votre fiche <br>
-              suivant la géolocalisation, <br>
-              la spécialité ou la localité</div>
+            <div class="profile-card-inf__txt">Création de votre fiche,<br>
+              incluant : Adresse, numéro de téléphone,<br>
+              géolocalisation, spécialité</div>
           </div>
 
         </div>
