--- a/src/app/demaqndemedecin/demaqndemedecin.component.css
+++ b/src/app/demaqndemedecin/demaqndemedecin.component.css
@@ -287,11 +287,11 @@ a, a:hover {
   box-shadow: 0px 7px 30px rgba(19, 127, 212, 0.75);
 }
 .profile-card__button.button--orange {
-  background: linear-gradient(45deg, #d5135a, #f05924);
-  box-shadow: 0px 4px 30px rgba(223, 45, 70, 0.35);
+  background: linear-gradient(45deg, #6713d5, #c024f0);
+  box-shadow: 0px 4px 30px  #6713d5;
 }
 .profile-card__button.button--orange:hover {
-  box-shadow: 0px 7px 30px rgba(223, 45, 70, 0.75);
+  box-shadow: 0px 7px 30px  #6713d5;
 }
 .profile-card__button.button--gray {
   box-shadow: none;
