--- a/src/app/listefiche/listefiche.component.html
+++ b/src/app/listefiche/listefiche.component.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-<app-navbarmedecin *ngIf="!isNavbarVisible" ></app-navbarmedecin>
+<app-navbarmedecin ></app-navbarmedecin>
 
 <h1 style="margin-left: 20px; margin-top: 20px;"><b>Liste des fiches</b></h1>
 <hr>
