mise a jour de test selenuim

--- a/src/app/navbarmedecin/navbarmedecin.component.html
+++ b/src/app/navbarmedecin/navbarmedecin.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand">
       <div class="sidebar-header">
 
-        <div class="app-icon">
+        <div class="app-icon" routerLink="interfacemedecin">
           <img src="..\assets\img\lg-removebg-preview.png" width="190PX">
         </div>
       </div>
