--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
     <div class="row gutters-sm">
       <div class="col-md-4 mb-3">
         <div class="card">
+          <h1 style="color: white;">Profile</h1>
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
               <img src="./assets/img/profile.png" alt="Profile Picture" class="rounded-circle" width="150">
@@ -79,6 +80,8 @@
   </div>
 </div>
 
+<hr>
+<button class="custom-btn btn-13" [routerLink]="listemedecin">Prendre un rendez-vous cher un medecin </button>
 
 <hr>
 
