--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         </svg>&nbsp; Prendre un rendez-vous  </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
+        <a class="nav-link" href="javascript:void(0);" routerLink="calender"><i class="far fa-calendar-alt"></i>Calendar</a>
       </li>
 
       <li class="nav-item">
